--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,11 @@
 
 
     <!-- access approximate location like wifi and such-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    </uses-permission>
+    <uses-permission
+        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
